Bug 230084 - "resp." is not the English translation of "bzw."
Summary: "resp." is not the English translation of "bzw."
Status: RESOLVED FIXED
Alias: None
Product: i18n
Classification: Translations
Component: en_GB (other bugs)
Version First Reported In: 4.4
Platform: openSUSE Unspecified
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-03-09 12:06 UTC by Tristan Miller
Modified: 2012-01-02 09:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tristan Miller 2010-03-09 12:06:59 UTC
Version:            (using KDE 4.4.1)
Installed from:    openSUSE RPMs

The KMail command-line help contains the following line:

  address|URL               Send message to 'address' resp. attach the file the 'URL' points to

It seems this was translated literally from German.  Please note that "resp." is almost never the English translation of the German "bzw."; see <http://files.nothingisreal.com/publications/Tristan_Miller/advice.pdf>.

The documentation would be properly translated as "Send message to 'address' or attach the file 'URL' points to".
Comment 1 Thomas McGuire 2010-04-18 15:38:59 UTC
SVN commit 1116039 by tmcguire:

Fix incorrect usage of "resp." in translatable string.

BUG: 230084

 M  +3 -3      kmail_options.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1116039
Comment 2 Tristan Miller 2012-01-02 08:51:16 UTC
Did the commit in Comment #1 ever make its way into a release?  As of KMail 1.13.6 (KDE 4.6) the grammar error is still there.
Comment 3 Jonathan Marten 2012-01-02 09:53:10 UTC
Should definitely be in KDE 4.7 and subsequent.

ID: b5da0588c6ccd1648e7c5949ff57981187f19c58
Added by Thomas McGuire over 1 year ago

Fix incorrect usage of "resp." in translatable string.

BUG: 230084

svn path=/trunk/KDE/kdepim/kmail/; revision=1116039