Fix incorrect usage of "resp." in translatable string.

BUG: 230084

svn path=/trunk/KDE/kdepim/kmail/; revision=1116039